<resources>
    <string name="app_name">Diabetes Paivakirja</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings Preferences -->
    <string name="user_settings">User Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Main Activity -->
    <string name="main_verensokeri">Verensokeri</string>
    <string name="main_lisaa_verensokeriarvo">Tallennna verensokeriarvo</string>
    <string name="main_paivamaara">Päivämäärä</string>
    <string name="main_aika">Aika</string>
    <string name="main_arvo">Arvo</string>
    <string name="main_nimi">Ari Salonen</string>

    <!-- Arvo Info Activity -->
    <string name="arvo_info_vuosi">Vuosi</string>
    <string name="arvo_info_kuukausi">Kuukausi</string>
    <string name="arvo_info_paiva">Päivä</string>
    <string name="arvo_info_verensokeri">Verensokeri</string>


    <!-- Common Strings -->
    <string name="nul" />

</resources>